[gd_scene load_steps=14 format=3 uid="uid://wlfcfsud3elg"]

[ext_resource type="Texture2D" uid="uid://8kc7p7wbv43j" path="res://Update/Container.png" id="1_00g5d"]
[ext_resource type="Script" path="res://Update/Scripts/Update.gd" id="1_mx3xm"]
[ext_resource type="FontFile" uid="uid://ds4ohnaje2v44" path="res://Theme/Inter font/static/Inter_18pt-Bold.ttf" id="2_b8l1r"]
[ext_resource type="FontFile" uid="uid://cql10rvrxrm18" path="res://Theme/Inter font/static/Inter_18pt-Medium.ttf" id="3_0qpwv"]
[ext_resource type="Texture2D" uid="uid://dmgq4ipbv5hgi" path="res://Update/Button.png" id="4_frb8g"]
[ext_resource type="Texture2D" uid="uid://cfnnq0egn203w" path="res://Update/Button Pressed.png" id="4_fudkr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ayw2f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l2awq"]
texture = ExtResource("4_frb8g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jtnhc"]
texture = ExtResource("4_fudkr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e8dmo"]
texture = ExtResource("4_frb8g")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0fwgo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_smnqg"]
texture = ExtResource("4_frb8g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_12wfw"]
texture = ExtResource("4_fudkr")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mx3xm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_00g5d")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/TextureRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b8l1r")
theme_override_font_sizes/font_size = 24
text = "Update"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/TextureRect/MarginContainer/VBoxContainer"]
modulate = Color(0.796078, 0.796078, 0.796078, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0qpwv")
theme_override_font_sizes/font_size = 18
text = "Tasker version 1.0_obd2 is available and you are running version 1.0_obd1. Do you want to update?"
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/TextureRect/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer/TextureRect/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/TextureRect/MarginContainer/VBoxContainer2/Control"]
layout_mode = 1
offset_top = -31.0
offset_right = 94.0
offset_bottom = -1.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/TextureRect/MarginContainer/VBoxContainer2/Control/HBoxContainer"]
custom_minimum_size = Vector2(94, 30)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ayw2f")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_l2awq")
theme_override_styles/hover = SubResource("StyleBoxTexture_jtnhc")
theme_override_styles/normal = SubResource("StyleBoxTexture_e8dmo")
text = "Not Now"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/TextureRect/MarginContainer/VBoxContainer2/Control"]
layout_mode = 2
offset_left = 155.0
offset_top = -31.0
offset_right = 249.0
offset_bottom = -1.0
alignment = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/TextureRect/MarginContainer/VBoxContainer2/Control/HBoxContainer2"]
custom_minimum_size = Vector2(94, 30)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_0fwgo")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_smnqg")
theme_override_styles/hover = SubResource("StyleBoxTexture_12wfw")
theme_override_styles/normal = SubResource("StyleBoxTexture_e8dmo")
text = "Update"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureRect/MarginContainer/VBoxContainer2/Control/HBoxContainer/Button" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureRect/MarginContainer/VBoxContainer2/Control/HBoxContainer2/Button" to="." method="_on_update_pressed"]
